SERVER-59895 init _sbeCompatible